feat : add documentation

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = "8000"
 
-DB_HOST = "localhost"
+DB_HOST = "redikru-postgres"
 DB_USER = "postgres"
 DB_PASS = "redikru"
 DB_NAME = "postgres"
